Changelog 1.0.0-1.20.2:

- Ported from [FORGE] 1.1.0-1.20.2 to [NEOFORGE] 1.0.0-1.20.2
- Changed logo.png

Changelog 1.0.1-1.20.2:

- Added Redstone Shield with Particle System
- Added tooltip that shows if particles are enabled or disabled
- Fixed ingame mod description

Changelog 1.0.2-1.20.2:

- Fixed Enchanting