@@ -127,7 +127,7 @@
   "item.morevanillashields.redstone_shield.green": "Grüner Redstoneschild",
   "item.morevanillashields.redstone_shield.light_blue": "Hellblauer Redstoneschild",
   "item.morevanillashields.redstone_shield.light_gray": "Hellgrauer Redstoneschild",
-  "item.morevanillashields.redstone_shield.lime": "LimettenRedstoneschild",
+  "item.morevanillashields.redstone_shield.lime": "Limetten Redstoneschild",
   "item.morevanillashields.redstone_shield.magenta": "Magentafarbener Redstoneschild",
   "item.morevanillashields.redstone_shield.orange": "Orangefarbenes Redstoneschild",
   "item.morevanillashields.redstone_shield.pink": "Rosa Redstoneschild",
