@@ -12,3 +12,11 @@ Changelog 1.0.1-1.20.2:
 Changelog 1.0.2-1.20.2:
 
 - Fixed Enchanting
+
+Changelog 1.0.2-1.20.2:
+
+- Fixed Compatibility with older forge versions
+- Fixed Redstone Shield Particle Density
+- Fixed typo in german translation
+- Made the End Crystal Shield explosive (turned on by default. To disable go into config)
+- Made End Crystal Shield Explosion serversided
